# hardforks

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/hardforks/: Cargo.toml
crates/hardforks/src/: constants.rs  error.rs  forkcondition.rs  lib.rs
crates/hardforks/src/arbitrum/: mainnet.rs  sepolia.rs
crates/hardforks/src/ethereum/: holesky.rs  hoodi.rs  mainnet.rs  sepolia.rs  testnet.rs
crates/hardforks/src/hardfork/: ethereum.rs  macros.rs  mod.rs
crates/op-hardforks/: Cargo.toml
crates/op-hardforks/src/: constants.rs  lib.rs
crates/op-hardforks/src/optimism/: mainnet.rs  mod.rs  sepolia.rs
src/: display.rs  forkcondition.rs  lib.rs
src/hardfork/: dev.rs  ethereum.rs  macros.rs  mod.rs
src/hardforks/: ethereum.rs  mod.rs
