# [package]
# name = "reth-ethereum-forks"
# version = "0.1.0"
# edition = "2021"
# description = "Ethereum fork types used in reth."

# [dependencies]
# alloy-chains = "0.1.55"
# alloy-primitives = { version = "0.8.18", features = ["serde", "rlp"] }
# alloy-rlp = "0.3.10"
# arbitrary = "1.4.1"
# auto_impl = "1.2.0"
# dyn-clone = "1.0.17"
# once_cell = "1.20.2"
# proptest = "1.6.0"
# proptest-derive = "0.5.1"
# rustc-hash = "2.1.0"
# serde = { version = "1.0.217",  features = ["derive"] }
# thiserror = "2.0.11"

# [features]
# default = ["serde"]
# serde = []  
[package]
name = "reth-ethereum-forks"
version = "1.1.5"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
homepage = "https://paradigmxyz.github.io/reth"
repository = "https://github.com/paradigmxyz/reth"
description = "Ethereum fork types used in reth."

[dependencies]
# ethereum
alloy-chains = { version = "0.1.32", default-features = false }
alloy-eip2124 = { version = "0.1.0", default-features = false }
alloy-primitives = { version = "0.8.15", default-features = false, features = ["serde", "rlp"] }

# misc
serde = { version = "1.0", features = ["derive"], optional = true }
dyn-clone = "1.0.17"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
rustc-hash = { version = "2.0", optional = true, default-features = false }

# arbitrary utils
arbitrary = { version = "1.3", features = ["derive"], optional = true }
auto_impl = "1.0"

[dev-dependencies]
arbitrary = { version = "1.3", features = ["derive"] }

[features]
default = ["std", "serde", "rustc-hash"]
arbitrary = [
    "dep:arbitrary",
    "alloy-chains/arbitrary",
    "alloy-primitives/arbitrary",
    "alloy-eip2124/arbitrary"
]
serde = [
    "dep:serde",
    "alloy-chains/serde",
    "alloy-primitives/serde",
    "alloy-eip2124/serde"
]
std = [
    "alloy-chains/std",
    "alloy-primitives/std",
    "rustc-hash/std",
    "serde?/std",
    "alloy-eip2124/std",
    "once_cell/std"
]
rustc-hash = ["dep:rustc-hash"]